# gst-remote-offload

./: CMakeLists.txt  README.md
cmake/: FindGVAPlugin.cmake  FindSafeString.cmake
core/: CMakeLists.txt  datatransferdefs.h  gstremoteoffloadpipeline.c  gstremoteoffloadpipeline.h  orderedghashtable.c  orderedghashtable.h  remoteoffloadbinpipelinecommon.c  remoteoffloadbinpipelinecommon.h  remoteoffloadbinserializer.c  remoteoffloadbinserializer.h  remoteoffloadclientserverutil.c  remoteoffloadclientserverutil.h  remoteoffloadcomms.c  remoteoffloadcomms.h  remoteoffloadcommschannel.c  remoteoffloadcommschannel.h  remoteoffloadcommsio.c  remoteoffloadcommsio.h  remoteoffloaddataexchanger.c  remoteoffloaddataexchanger.h  remoteoffloaddevice.c  remoteoffloaddevice.h  remoteoffloaddeviceproxy.c  remoteoffloaddeviceproxy.h  remoteoffloadelementpropertyserializer.c  remoteoffloadelementpropertyserializer.h  remoteoffloadelementserializer.c  remoteoffloadelementserializer.h  remoteoffloadextension.c  remoteoffloadextension.h  remoteoffloadextregistry.c  remoteoffloadextregistry.h  remoteoffloadmetaserializer.c  remoteoffloadmetaserializer.h  remoteoffloadpipelinelogger.c  remoteoffloadpipelinelogger.h  remoteoffloadprivateinterfaces.c  remoteoffloadprivateinterfaces.h  remoteoffloadresponse.h  remoteoffloadutils.c  (+1 more)
core/cmake/: GstRemoteOffloadConfig.cmake.in
core/exchangers/: bufferdataexchanger.c  bufferdataexchanger.h  eosdataexchanger.c  eosdataexchanger.h  errormessagedataexchanger.c  errormessagedataexchanger.h  eventdataexchanger.c  eventdataexchanger.h  genericdataexchanger.c  genericdataexchanger.h  heartbeatdataexchanger.c  heartbeatdataexchanger.h  pingdataexchanger.c  pingdataexchanger.h  querydataexchanger.c  querydataexchanger.h  queuestatsdataexchanger.c  queuestatsdataexchanger.h  statechangedataexchanger.c  statechangedataexchanger.h
core/metaserializers/: gstvideometaserializer.c  gstvideometaserializer.h  gstvideoroimetaserializer.c  gstvideoroimetaserializer.h
extensions/: CMakeLists.txt
extensions/autonomous_mode/: CMakeLists.txt  FindXLink.cmake  README.md  gsthddl.c  gsthddlconn.c  gsthddlconn.h  gsthddlcontext.c  gsthddlcontext.h  gsthddlsink.c  gsthddlsink.h  gsthddlsrc.c  gsthddlsrc.h  gsthddltcpconn.h  gsthddltcpplaceholder.c  gsthddltcpplaceholder.h  gsthddlutils.c  gsthddlutils.h  gsthddlvideoroimeta.c  gsthddlvideoroimeta.h  gsthddlxlinkcomms.c  gsthddlxlinkcomms.h  gsthddlxlinkplaceholders.c  gsthddlxlinkplaceholders.h  version.h
extensions/dummy/: CMakeLists.txt  dummydeviceproxy.c  dummydeviceproxy.h  remoteoffloadcommsio_dummy.c  remoteoffloadcommsio_dummy.h  remoteoffloadextensiondummy.c
extensions/gva/: CMakeLists.txt  gvaaudioeventmetaserializer.c  gvaaudioeventmetaserializer.h  gvaelementpropertyserializer.c  gvaelementpropertyserializer.h  gvajsonmetaserializer.c  gvajsonmetaserializer.h  gvatensormetaserializer.c  gvatensormetaserializer.h  remoteoffloadextensiongva.c
extensions/hddl/: CMakeLists.txt  FindXLink.cmake
extensions/hddl/common/: remoteoffloadcommsio_xlink.c  remoteoffloadcommsio_xlink.h
extensions/hddl/hddl_ext/: CMakeLists.txt
extensions/hddl/hddl_ext/client_side/: CMakeLists.txt  hddldeviceproxy.cpp  hddldeviceproxy.h  remoteoffloadextensionhddl.c
extensions/hddl/hddl_ext/common/: xlinkcommschannelcreator.cpp  xlinkcommschannelcreator.h
extensions/hddl/hddl_ext/server_side/: CMakeLists.txt  gstrophddl.cpp  gstrophddl.h
extensions/hddl/xlink_ext/: CMakeLists.txt  gst_offload_xlink_server.c  remoteoffloadextensionxlink.c  xlinkchannelmanager.c  xlinkchannelmanager.h  xlinkdeviceproxy.c  xlinkdeviceproxy.h
gsthelperelements/: CMakeLists.txt  gstbufferspersecond.c  gstbufferspersecond.h  gstsublaunch.c  gstsublaunch.h  gstvideoroicompose.c  gstvideoroicompose.h  gstvideoroicrop.c  gstvideoroicrop.h  gstvideoroicropinternal.c  gstvideoroicropinternal.h  gstvideoroimetaattach.c  gstvideoroimetaattach.h  gstvideoroimetadetach.c  gstvideoroimetadetach.h  gstvideoroimetafilter.c  gstvideoroimetafilter.h
gstremoteoffloadplugin/: CMakeLists.txt  gstingressegressdefs.h  gstremoteoffloadbin.c  gstremoteoffloadbin.h  gstremoteoffloadegress.c  gstremoteoffloadegress.h  gstremoteoffloadingress.c  gstremoteoffloadingress.h  plugin.c
scripts/: get_models.sh
tests/: CMakeLists.txt
tests/autonomous_mode/: CMakeLists.txt  target_dec_app.c  target_passthrough_app.c  target_trans_app.c
tests/check/: CMakeLists.txt  appsinkcomparer.c  appsinkcomparer.h  rob_basic.c  rob_error_handling.c  robtestutils.c  robtestutils.h  sublaunch.c  videoroimetafilter.c
tests/commsio/: xlink_echo_host.c  xlink_echo_server.c
tests/remoteoffloadbin/: CMakeLists.txt  face_detection_and_classification.c  sanity.sh  test1.c  test1_gstlaunch.sh  test2.c  test2_gstlaunch.sh  test3.c  test3_gstlaunch.sh  test4.c  test4_gstlaunch.sh  test5.c  test5_gstlaunch.sh  test6.c  test7.c  test8.c  test9.c  test_common.h  testcropandcomposeroi.c  testcroproi.c  vaapi_encode_decode_classify.c  vehicle_detection.c
